[gd_scene load_steps=12 format=2]

[ext_resource path="res://Player/GDscripts/Player_Container.gd" type="Script" id=1]
[ext_resource path="res://Global.gd" type="Script" id=2]
[ext_resource path="res://Enemies/Asteroid_Container.gd" type="Script" id=3]
[ext_resource path="res://Menus/HUD.gd" type="Script" id=4]
[ext_resource path="res://Effects/MADE TOMMY Bold_PERSONAL USE.otf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=5]
size = 31
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 77
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 31
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 31
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 5 )

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="Player_Container" type="Node2D" parent="."]
pause_mode = 1
script = ExtResource( 1 )

[node name="Effects" type="Node2D" parent="."]
pause_mode = 1

[node name="Asteroid_Container" type="Node2D" parent="."]
pause_mode = 1
script = ExtResource( 3 )

[node name="Enemy_Container" type="Node2D" parent="."]
pause_mode = 1

[node name="UI" type="CanvasLayer" parent="."]

[node name="Menu" type="Control" parent="UI"]
pause_mode = 2
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="UI/Menu"]
margin_right = 2449.0
margin_bottom = 1431.0
color = Color( 0, 0, 0, 0.227451 )

[node name="Quit" type="Button" parent="UI/Menu"]
anchor_right = 25.542
anchor_bottom = 14.942
margin_left = 471.0
margin_top = 317.0
margin_right = -382.68
margin_bottom = -235.68
custom_fonts/font = SubResource( 5 )
text = "Quit"

[node name="Label" type="Label" parent="UI/Menu"]
anchor_left = 9.894
anchor_top = 1.974
anchor_right = 12.278
anchor_bottom = 1.974
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
text = "Paused"

[node name="Continue" type="Button" parent="UI/Menu"]
anchor_right = 25.613
anchor_bottom = 14.912
margin_left = 469.0
margin_top = 208.0
margin_right = -384.52
margin_bottom = -341.48
custom_fonts/font = SubResource( 6 )
text = "Continue"

[node name="Restart" type="Button" parent="UI/Menu"]
anchor_left = 12.446
anchor_top = 6.731
anchor_right = 12.446
anchor_bottom = 6.743
margin_left = -27.84
margin_top = -6.23999
margin_right = 141.16
margin_bottom = 41.28
custom_fonts/font = SubResource( 4 )
text = "Restart"

[node name="HUD" type="Control" parent="UI"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )

[node name="Score" type="Label" parent="UI/HUD"]
margin_left = 1.0
margin_top = 1.0
margin_right = 73.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 1 )
text = "Score:"

[node name="Level" type="Label" parent="UI/HUD"]
anchor_top = 0.675
anchor_bottom = 0.675
margin_top = 20.0
margin_right = 69.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 2 )
text = "Level:"

[node name="Indicator" type="Control" parent="UI/HUD"]
anchor_left = 0.075
anchor_top = -15.726
anchor_right = 6.204
anchor_bottom = -10.0
margin_top = 151.04
margin_right = -122.16
margin_bottom = 31.0
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="UI/Menu/Quit" to="UI/HUD" method="_on_Quit_pressed"]
[connection signal="pressed" from="UI/Menu/Continue" to="UI/HUD" method="_on_Continue_pressed"]
[connection signal="pressed" from="UI/Menu/Restart" to="UI/HUD" method="_on_Restart_pressed"]
